--- a/public/index.html
+++ b/public/index.html
@@ -32,10 +32,11 @@
   <body>
     <form
       data-netlify="true"
-      data-netlify-recaptcha="true"
       hidden
       name="contact"
+      action="/my_thank_you.html"
       netlify-honeypot="bot-field"
+      method="POST"
     >
       <input type="text" name="name" />
       <input type="email" name="email" />
